Fix loading text layout issue (no padding)

--- a/static/less/results.less
+++ b/static/less/results.less
@@ -182,6 +182,7 @@ header.results-label h3 {
         td {
           padding: 0;
           &.no-results {
+            padding: 12px 15px 12px 25px;
             font-style: italic;
             cursor: default;
           }
